WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45481
Inline FrameLoader::committedLoad into its one caller
https://bugs.webkit.org/show_bug.cgi?id=45481
Summary
Inline FrameLoader::committedLoad into its one caller
Adam Barth
Reported
2010-09-09 11:37:04 PDT
Inline FrameLoader::committedLoad into its one caller
Attachments
Patch
(3.00 KB, patch)
2010-09-09 11:39 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.18 KB, patch)
2010-09-09 12:18 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-09-09 11:39:04 PDT
Created
attachment 67072
[details]
Patch
Early Warning System Bot
Comment 2
2010-09-09 11:50:28 PDT
Attachment 67072
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/3943343
Eric Seidel (no email)
Comment 3
2010-09-09 12:01:13 PDT
Attachment 67072
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3921337
Eric Seidel (no email)
Comment 4
2010-09-09 12:11:08 PDT
Comment on
attachment 67072
[details]
Patch It appears you're missing an include? ../../../WebCore/loader/DocumentLoader.cpp: In member function 'void WebCore::DocumentLoader::commitLoad(const char*, int)': ../../../WebCore/loader/DocumentLoader.cpp:285: error: invalid use of incomplete type 'struct WebCore::FrameLoaderClient' ../../../WebCore/loader/SubframeLoader.h:45: error: forward declaration of 'struct WebCore::FrameLoaderClient' Otherwise seems fine.
Adam Barth
Comment 5
2010-09-09 12:18:41 PDT
Created
attachment 67077
[details]
Patch for landing
Eric Seidel (no email)
Comment 6
2010-09-09 14:42:17 PDT
ews hung on this patch: Failed to run "['WebKitTools/Scripts/build-webkit', '--release']" exit_code: 1 Adding comment to
bug 45481
WebKit Commit Bot
Comment 7
2010-09-10 07:30:53 PDT
Comment on
attachment 67077
[details]
Patch for landing Clearing flags on attachment: 67077 Committed
r67198
: <
http://trac.webkit.org/changeset/67198
>
WebKit Commit Bot
Comment 8
2010-09-10 07:30:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug