2010-09-10  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Inline FrameLoader::committedLoad into its one caller
        https://bugs.webkit.org/show_bug.cgi?id=45481

        This saves one round-trip through the FrameLoader when loading
        documents.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::commitLoad):
        * loader/FrameLoader.cpp:
        * loader/FrameLoader.h:

Canonical link: https://commits.webkit.org/57934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67198 268f45cc-cd09-0410-ab3c-d52691b4dbfc